--- a/css/styles.css
+++ b/css/styles.css
@@ -64,30 +64,6 @@ a:focus {
 	--tr-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.container {
-	max-width: 1158px;
-	margin: 0 auto;
-	padding: 0 15px;
-}
-
-header {
-	border-bottom: 1px solid #e7e9fc;
-}
-
-address {
-	margin-left: auto;
-}
-
-.header-wrapper {
-	display: flex;
-	align-items: center;
-}
-
-.header-wrapper > .header-navigation {
-	display: flex;
-	align-items: center;
-}
-
 body {
 	font-family: "Roboto", sans-serif;
 	color: var(--dark, #2e2f42);
@@ -102,6 +78,254 @@ body {
 
 ul {
 	list-style: none;
+}
+.container {
+	width: 90%;
+	min-width: 320px;
+	max-width: 1158px;
+	margin: 0 auto;
+	padding: 0 15px;
+	border: 1px solid red;
+}
+
+@media (min-width: 480px) {
+	.container {
+		max-width: 480px;
+	}
+}
+
+@media (min-width: 768px) {
+	.container {
+		max-width: 768px;
+	}
+}
+
+@media (min-width: 1200px) {
+	.container {
+		max-width: 1200px;
+	}
+}
+
+.header-wrapper {
+	height: 70px;
+}
+
+.header-navigation {
+	display: flex;
+	align-items: center;
+}
+
+header {
+	border-bottom: 1px solid #e7e9fc;
+}
+
+.address-link-phone {
+	color: var(--primary-brand);
+	font-family: Roboto;
+	font-size: 36px;
+	font-weight: 700;
+	font-style: normal;
+	line-height: 111.11%;
+	letter-spacing: 0.72px;
+	text-transform: capitalize;
+	display: inline-block;
+	margin-bottom: 40px;
+	margin-left: 40px;
+}
+
+.address-link-mail {
+	color: var(--text);
+	font-family: Roboto;
+	font-size: 20px;
+	font-weight: 500;
+	font-style: normal;
+	line-height: 120%;
+	letter-spacing: 0.4px;
+	display: inline-block;
+	margin-bottom: 48px;
+	margin-left: 40px;
+}
+
+.menu-mobile-media {
+	display: flex;
+	gap: 56px;
+	margin-left: 40px;
+}
+
+.nav-button {
+	position: absolute;
+	inset: 24px 16px auto auto;
+	width: 32px;
+	height: 22px;
+}
+
+.nav-button-item {
+	stroke: var(--dark);
+}
+
+.menu-wrapper {
+	translate: -100% 0 0;
+	transition: translate 250ms;
+	position: fixed;
+	inset: 0;
+	background: #fff;
+}
+
+.menu-wrapper.is-open {
+	translate: none;
+}
+
+.menu-button {
+	position: absolute;
+	inset: 24px 24px auto auto;
+	width: 24px;
+	height: 24px;
+	border-radius: 50%;
+	fill: var(--accent);
+	stroke-width: 1px;
+	stroke: rgba(0, 0, 0, 0.1);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.menu-button > svg {
+	width: 8px;
+	height: 8px;
+	fill: var(--dark);
+}
+
+.menu {
+	list-style: none;
+}
+
+.menu > li {
+	margin-bottom: 40px;
+}
+
+.menu-mobile-link-items-current {
+	color: var(--pressed-state);
+	font-family: Roboto;
+	font-size: 36px;
+	font-weight: 700;
+	line-height: 111.111%;
+	letter-spacing: 0.72px;
+}
+
+.menu-mobile-link-items {
+	color: var(--dark);
+	font-family: Roboto;
+	font-size: 36px;
+	font-weight: 700;
+	line-height: 111.111%;
+	letter-spacing: 0.72px;
+}
+
+.menu-link,
+.address-link {
+	display: none;
+}
+
+@media screen and (min-width: 768px) {
+	.logo {
+		margin-right: 76px;
+	}
+
+	.nav-button {
+		visibility: hidden;
+	}
+
+	header {
+		background-color: #fff;
+		position: sticky;
+		top: 0;
+		left: 0;
+		right: 0;
+	}
+
+	.header-wrapper {
+		display: flex;
+		align-items: center;
+	}
+
+	.header-wrapper > .header-navigation {
+		display: flex;
+		align-items: center;
+	}
+
+	.address-link-items {
+		color: var(--text, #434455);
+		font-family: Roboto;
+		font-size: 16px;
+		font-style: normal;
+		font-weight: 400;
+		line-height: 1.5;
+		letter-spacing: 0.32px;
+	}
+
+	.menu-link {
+		display: flex;
+		gap: 40px;
+		padding: 24px 0;
+	}
+
+	nav {
+		color: var(--dark, #2e2f42);
+		font-size: 16px;
+		font-weight: 500;
+		line-height: 1.5;
+		letter-spacing: 0.32px;
+	}
+	.menu-link-items {
+		color: var(--dark, #2e2f42);
+		font-family: Roboto;
+		font-size: 16px;
+		font-weight: 500;
+		line-height: 1.5;
+		letter-spacing: 0.32px;
+	}
+
+	.menu-link > li {
+		position: relative;
+	}
+
+	.menu-link-items-current::after {
+		content: "";
+		background-color: var(--pressed-state);
+		height: 4px;
+		width: 100%;
+		bottom: -24px;
+		left: 0px;
+		border-radius: 2px;
+		position: absolute;
+	}
+	address {
+		margin-left: auto;
+	}
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+	.address-link {
+		display: flex;
+		gap: 12px;
+		flex-direction: column;
+		padding: 16px 0;
+		margin-left: auto;
+	}
+}
+
+@media screen and (min-width: 1200px) {
+	.address-link {
+		display: flex;
+		gap: 40px;
+		align-items: center;
+		padding: 24px 0;
+		margin-left: auto;
+	}
+
+	.nav-button {
+		visibility: hidden;
+	}
 }
 
 .main-order-service {
@@ -390,88 +614,53 @@ ul {
 	margin-top: 24px;
 }
 
-nav {
-	color: var(--dark, #2e2f42);
-	font-size: 16px;
-	font-weight: 500;
-	line-height: 1.5;
-	letter-spacing: 0.32px;
-}
-
-.menu-link {
-	display: flex;
-	gap: 40px;
-	padding: 24px 0;
-}
-
-.menu-link-items {
-	color: var(--dark, #2e2f42);
-	font-family: Roboto;
-	font-size: 16px;
-	font-weight: 500;
-	line-height: 1.5;
-	letter-spacing: 0.32px;
-}
-
-.menu-link > li {
-	position: relative;
-}
-
-.menu-link-items-current::after {
-	content: "";
-	background-color: var(--pressed-state);
-	height: 4px;
-	width: 100%;
-	bottom: -24px;
-	left: 0px;
-	border-radius: 2px;
-	position: absolute;
-}
-
-.address-link {
-	display: flex;
-	gap: 40px;
-	align-items: center;
-	padding: 24px 0;
-	margin-left: auto;
-}
-
-.address-link-items {
-	color: var(--text, #434455);
-	font-family: Roboto;
-	font-size: 16px;
-	font-style: normal;
-	font-weight: 400;
-	line-height: 1.5;
-	letter-spacing: 0.32px;
-}
-
-.heading-hidden {
-	visibility: hidden;
-}
-
-.main-content {
-	padding: 120px 0;
+.main-content-icons {
+	display: none;
 }
 
 .main-content-values {
 	display: flex;
-	justify-content: space-between;
-	gap: 24px;
+	flex-wrap: wrap;
 }
 
-.main-content-icons {
-	height: 112px;
-	border-radius: 4px;
-	background-color: var(--light, #f4f4fd);
-	display: flex;
-	justify-content: center;
-	align-items: center;
+.values-column {
+	width: 100%;
 }
 
-.main-content-icons-items {
-	width: 64px;
-	height: 64px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+	.values-column {
+		width: 50%;
+	}
+}
+
+@media screen and (min-width: 1200px) {
+	.heading-hidden {
+		visibility: hidden;
+	}
+
+	.main-content {
+		padding: 120px 0;
+	}
+
+	.main-content-values {
+		display: flex;
+		justify-content: space-between;
+		gap: 24px;
+	}
+
+	.main-content-icons {
+		height: 112px;
+		border-radius: 4px;
+		background-color: var(--light, #f4f4fd);
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.main-content-icons-items {
+		width: 64px;
+		height: 64px;
+	}
 }
 
 .main-content-images {
@@ -547,6 +736,7 @@ nav {
 .main-team-media-items {
 	width: 16px;
 	height: 16px;
+	fill: #fff;
 }
 
 .main-team-media-items:hover {
@@ -653,7 +843,6 @@ nav {
 	line-height: 1.17;
 	letter-spacing: 0.54px;
 	text-transform: uppercase;
-	margin-right: 76px;
 }
 
 .heading {
@@ -749,6 +938,7 @@ nav {
 .footer-media-items {
 	width: 24px;
 	height: 24px;
+	fill: #fff;
 	transition: 250ms;
 	transition-timing-function: var(--tr-function);
 }
@@ -860,4 +1050,10 @@ nav {
 .footer-subscribe-icon {
 	width: 24px;
 	height: 24px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+	.container {
+		max-width: 768px;
+	}
 }
