--- a/images/icomoon/style.css
+++ b/images/icomoon/style.css
@@ -15,6 +15,10 @@ Single-colored icons can be modified like so:
 }
 ========================================== */
 
+.icon-menu-hamburger {
+  width: 1.4541015625em;
+}
+
 .icon-Vector {
   width: 1.25em;
 }
